[package]
name = "rusty-rougelike"
version = "0.1.0"
authors = ["voidpumpkin <32368314+voidpumpkin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.6.2"
specs = "0.15.1"
specs-derive = "0.4.0"