[package]
name = "rusty-rougelike"
version = "0.1.0"
authors = ["voidpumpkin <32368314+voidpumpkin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.8.1" 
serde = "1.0.110"
specs-derive = "0.4.1"

[dependencies.specs]
version = "0.16.1"
default-features = false
features = ['serde']